Website: fix download URL, improve light theme contrast

--- a/docs/style/default.css
+++ b/docs/style/default.css
@@ -2,7 +2,7 @@
 
 :root {
     --smfx: #d4dbdc;
-    --smfx-gradient: linear-gradient(#dce5e4, #cbd0d3);
+    --smfx-gradient: linear-gradient(#dce5e4, #c1c6c6);
 }
 
 html {
